--- a/pyProject.ipynb
+++ b/pyProject.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "Pour réaliser ce projet, on demande à l'utilisateur d'entrer les nom et prénom de l'étudiant, on vérifie avec les expressions régulières la présence de caractères spéciaux.Les prénoms contenant des lettres accentuées ont été pris en compte en remplaçant dans le matricule ces lettrespar les lettres majuscule de base ( par exemple â est remplacé par A)\n",
     "    Pour le troisième champ du matricule, nous avons décidé de l'initialiser à 001 pour tous les étudiants car une fois attribué, un matricule ne peut être changé et donc au cas où deux étudiants auraient les deux premiers champs de leurs matricules identiques le premier étudiant enregistré aurait déjà eu 001 et le second 002\n",
-    "    L'analyse du projet nous a amené à enregistrer les matricules générés dans un fichier nommé matricule.txt\n",
+    "    L'analyse du projet nous a amené à enregistrer les matricules générés dans un fichier nommé matricule.txt. Pour gérer les cas particuliers comme présenté plus haut, nous parcourons juste le fichier à la recherche de(s) matricue(s) dont les deux premiers sont égaux à ceux du nouveau maticule généré\n",
     "    Ce fichier contient en plus le nom et le prénom correspondant aux différents matricules\n",
     "    \n",
     "Les fonctions que nous avons implémentées pour résoudre le problème  ont pour prototypes :\n",
